// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiteratureItem does not arxiv pdf download action if there is no eprint value 1`] = `
<ResultItem
  actions={
    Array [
      <CiteModalAction
        recordId={12345}
    />,
    ]
  }
>
  <Link
    className="f4"
    replace={false}
    to="/literature/12345"
  >
    <Latex />
  </Link>
  <div
    className="mt2"
  >
    <AuthorList
      authors={
        Immutable.List [
        ]
      }
      limit={5}
      recordId={12345}
    />
    <LiteratureDate
      date={null}
    />
  </div>
  <div
    className="mt2"
  >
    <PublicationInfoList
      publicationInfo={null}
    />
    <ArxivEprintList
      eprints={null}
    />
    <DOIList
      dois={null}
    />
    <ReportNumberList
      reportNumbers={null}
    />
    <CollapsableAbstract
      abstract={null}
    />
  </div>
</ResultItem>
`;

exports[`LiteratureItem does not render citation and reference count if they are missing 1`] = `
<ResultItem
  actions={
    Array [
      <CiteModalAction
        recordId={12345}
    />,
    ]
  }
>
  <Link
    className="f4"
    replace={false}
    to="/literature/12345"
  >
    <Latex />
  </Link>
  <div
    className="mt2"
  >
    <AuthorList
      authors={
        Immutable.List [
        ]
      }
      limit={5}
      recordId={12345}
    />
    <LiteratureDate
      date={null}
    />
  </div>
  <div
    className="mt2"
  >
    <PublicationInfoList
      publicationInfo={null}
    />
    <ArxivEprintList
      eprints={null}
    />
    <DOIList
      dois={null}
    />
    <ReportNumberList
      reportNumbers={null}
    />
    <CollapsableAbstract
      abstract={null}
    />
  </div>
</ResultItem>
`;

exports[`LiteratureItem renders with all props set, including sub props 1`] = `
<ResultItem
  actions={
    Array [
      <ArxivPdfDownloadAction
        arxivId="1234567890"
    />,
      <CiteModalAction
        recordId={12345}
    />,
      <ListItemAction
        iconType="login"
        link={
            Object {
                "to": "/literature/12345#references",
              }
        }
        onClick={undefined}
        text="2 references"
    />,
      <ListItemAction
        iconType="logout"
        link={
            Object {
                "to": "/literature/12345#citations",
              }
        }
        onClick={undefined}
        text="1 citations"
    />,
    ]
  }
>
  <Link
    className="f4"
    replace={false}
    to="/literature/12345"
  >
    <Latex>
      test
    </Latex>
  </Link>
  <div
    className="mt2"
  >
    <AuthorList
      authors={
        Immutable.List [
          Immutable.Map {
            full_name: "Test, Author",
          },
        ]
      }
      limit={5}
      recordId={12345}
    />
    <LiteratureDate
      date="Jun 7, 1993"
    />
  </div>
  <div
    className="mt2"
  >
    <PublicationInfoList
      publicationInfo={null}
    />
    <ArxivEprintList
      eprints={
        Immutable.List [
          Immutable.Map {
            value: "1234567890",
          },
        ]
      }
    />
    <DOIList
      dois={
        Immutable.List [
          Immutable.Map {
            value: "12345679.1234.123",
          },
        ]
      }
    />
    <ReportNumberList
      reportNumbers={
        Immutable.List [
          Immutable.Map {
            value: "ABCD-AB-CD-1234-123",
          },
        ]
      }
    />
    <CollapsableAbstract
      abstract={null}
    />
  </div>
</ResultItem>
`;
